<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COVID19RELIEF</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="forget_password_reset_password">Forget Password/Reset Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="sign_up_to_start_your_journey">Sign Up to start your journey</string>
    <string name="mobile">Mobile</string>
    <string name="full_name">Full Name</string>
    <string name="select_your_role">Select your Role</string>
    <string name="aldready_have_an_account_login">Aldready have an account? LogIn</string>
    <string name="monitors">Monitors</string>
    <string name="volunteers">volunteers</string>
    <string name="covid19_relief">Covid19 Relief</string>
    <string name="stay_home_stay_safe" translatable="false" tools:ignore="ExtraTranslation">Haryana</string>
    <string name="my_status">My Status</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="current_status">Current Status</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="reset">Reset</string>
    <string name="updates">Covid Updates</string>
    <string name="cases_report">Cases Report</string>
    <string name="profile">Profile</string>
    <string name="mapping">Mapping</string>
    <string name="labour">Labour</string>
    <string name="healthworker">Health worker</string>
    <string name="workers">Sector Workers</string>
    <string name="donate">Donate</string>
    <string name="helpline">Helpline</string>
    <string name="notification">Notification</string>
    <string name="view_in_map">View in map</string>
    <string name="to_do">TO DO</string>
    <string name="scan">Geo fencing</string>
    <string name="intro1">Each one of us has the power to help prevent the spread of the corona virus pandemic in India \nWould you like to be kept informed if you crossed paths with someone who has tested COVID-19 positive ?</string>
    <string name="intro2">COVID-19 RELIEF tracks through a blutooth and location generated social graph, your interaction with someone who could have found victim of COVID-19.\n </string>
    <string name="intro3">Scan option in the app can be used  to get alerts if someone you have come in close proximity of,even unknowingly,found victim of COVID-19</string>
    <string name="intro4">COVID-19-RELIEF  is a mobile application developed to connect and coordinate essential health and various services with the people of India to fight against COVID-19. The App is aimed at building a community to help and coordinate  various services and sectors, particularly the Department of Health, in proactively reaching out to and informing the users of the app regarding risks, best practices and relevant updates of COVID-19. </string>
    <string name="medical_shops">Medical shops</string>
    <string name="epass">ePass and Government service</string>
    <string name="stranded_migrant">Stranded migrant</string>
    <string name="pay_using_upi">Pay using UPI</string>
    <string name="hospital_appointment">Hospital Appointment</string>
    <string name="lab_test">Lab Test</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="quora">Quora</string>
    <string name="notify">Notification</string>
    <string name="select_catagory">Select category</string>
    <string name="assign">Assign</string>
    <string name="please_turn_on_internet_to_stay_updated">Please turn on internet to stay updated</string>
    <string name="go_back_and_pull_down_to_refresh">Go back and pull down to refresh</string>
    <string name="close">Close</string>
    <string name="alert">Alert !</string>
    <string name="found_new_victim_in_your_surrounding">Found new victim in your surrounding</string>
    <string name="stay_away_from_the_place">Stay away from the place !</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="hospital_nlab_test_nmedicine">Appointments/Admissions</string>
    <string name="first_responder">First Responder</string>
    <string name="be_ready_to_contribute">Get help instantly</string>
    <string name="be_the_first_responder">Be the First Responder</string>
    <string name="alert_nearby">Alert Nearby</string>
    <string name="dial_108">Dial 108</string>
    <string name="dial_100">Dial 100</string>
    <string name="dial_101">Dial 101</string>
    <string name="nearby_hospitals">Nearby Hospitals</string>
    <string name="first_aid_guidance">First Aid Guidance</string>
    <string name="share_with">Share with</string>
    <string name="translate">Translate</string>
    <string name="assistant">Assistant</string>
    <string name="support">Support Assistant</string>
    <string name="chatbotintro">Support assistant  simulates human conversation through voice commands or text chats or both.It helps you by navigation and by answering your queries</string>
    <string name="whatsapp_queries">Whatsapp Queries</string>
    <string name="join_in_our_communtiy">Join in our Communtiy</string>
    <string name="labs_for_test">Labs for test</string>
    <string name="action_on_covid_19_relief_for_msme_sector">Action on COVID-19 Relief for MSME Sector</string>
    <string name="looking_for_products_and_service_to_sell_on_gem_sign_up_now">Looking For Products and Service To Sell On GeM, Sign Up Now !</string>
    <string name="hospital_near_me">Hospital near me</string>
    <string name="alarm">Alarm</string>
    <string name="select_volunteer">Select Volunteer</string>
    <string name="active">Active</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="visualise">Visualise</string>
    <string name="got_help">Got Help !</string>
    <string name="need_help">Need Help !</string>
    <string name="respond">Respond</string>
    <string name="stay_home_save_lives_help_stop_coronavirus_stay_home_keep_safe_distance_wash_hands_often_cover_your_cough_sick_call_the_helpline">STAY HOME.SAVE LIVES. Help stop coronavirus STAY home KEEP safe distance WASH hands often COVER your cough SICK? Call the helpline</string>
    <string name="msme_covid_19_related_products">MSME COVID 19 related products</string>
    <string name="stay_protected">Stay Protected</string>
    <string name="you_will_be_alerted_when_you_getting_closer_to_covid_victim_even_when_the_app_is_minimised">You will be alerted when you getting closer to COVID victim even when the app is minimised</string>
    <string name="starting_scan">Starting Scan ...</string>
    <string name="stop">Stop</string>
    <string name="post_your_queries_here">Post your Queries here</string>
    <string name="post">POST</string>
    <string name="register_course">Register Course</string>
    <string name="publiccare">Public health care location</string>
    <string name="msme_products">MSME Products</string>
    <string name="sectorworkers">Unorganized Sector workers</string>
    <string name="course">Online Course</string>
    <string name="email_optional">Email (OPTIONAL)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="important_links">Important Links</string>
    <string name="biometric">Biometric</string>
    <string name="verifyfail">Coudn\'t Verify, Try again</string>
    <string name="verifysuccess">Verified</string>
    <string name="or">OR</string>
    <string name="scan_below_qr_to_share">Scan below QR to Share</string>
    <string name="use_password">Use Password</string>
    <string name="touch_sensor">Touch Sensor</string>
    <string name="verify_your_identity">Verify your Identity</string>
    <string name="confirm_your_fingerprint_so_covid_19_relief_can_verify_it_s_you">Confirm your fingerprint so COVID-19 RELIEF can verify it\'s you.</string>
    <string name="it_has_not_been_generated_by_covid_19_relief">It has not been generated by COVID-19 RELIEF</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="generate_scan_qr">Generate/scan QR</string>
    <string name="a_lot_of_features_like_voice_assistant_qr_scanner_reader_settings_can_be_found_here">A lot of Features like Voice Assistant,QR Scanner/Reader,Settings can be found here</string>
    <string name="sign_in_sign_up">Sign IN / Sign UP</string>
    <string name="reject">Reject</string>
    <string name="verify_your_mobile">Verify your mobile</string>
    <string name="title_activity_work_assign_home">WorkAssignHome</string>
    <string name="to_160_160_do"><![CDATA[To   do]]></string>
    <string name="done">Done</string>
    <string name="title_activity_to_do_home">ToDoHome</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="add_alarm">Add alarm</string>
    <string name="click_to_turn_off">Press volume button to turn off</string>
    <string name="submit">Submit</string>
    <string name="orphan">Orphan</string>
    <string name="counsellor">counsellor</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="apply_here">Apply here</string>
    <string name="try_again">Try Again</string>
    <string name="submit_your_proof_of_identity_for_verification_before_you_start_your_service">Submit your proof of identity for verification before you start your service</string>
    <string name="your_form_is_under_processing">Your form is under processing !</string>
    <string name="please_wait">Please wait</string>
    <string name="your_identity_is_verified_nyou_can_start_providing_your_services">Your Identity is verified !\nYou can start providing your services !</string>
    <string name="verification">Verification</string>
    <string name="details">Details</string>
    <string name="approve">Approve</string>
    <string name="requests">Requests</string>
    <string name="welcome_back_nstay_safe_from_covid_19">Welcome back\nStay safe from COVID-19</string>
    <string name="change_number">Change number</string>
    <string name="proof_of_identity">Proof of Identity :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selfassess1">If you are having difficulty breathing or experiencing other severe symptoms, call 011-23978046 or 1075</string>
    <string name="selfassess2">Are you experiencing any of the following symptoms?
1) severe difficulty breathing (for example, struggling for each breath, speaking in single words)
2) severe chest pain
3) having a very hard time waking up
4) feeling confused
5) lost consciousness</string>
    <string name="selfassess3">Self-assessment result
Please call 1075, +91-11-23978046 or email at ncov2019@gmail.com or go directly to your nearest emergency department.</string>
    <string name="selfassess4">Are you experiencing any of the following symptoms (or a combination of these symptoms)?
1) muscle aches
2) fatigue
3) headache
4) sore throat
5) runny nose
Symptoms in young children may also be non-specific (for example, lethargy, poor feeding).</string>
    <string name="selfassess5">Have you travelled outside of India in the last 14 days?</string>
</resources>