<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/assistant"
        android:id="@+id/chatbot"
        app:showAsAction="always"
        android:icon="@drawable/chatbot"/>
    <item
        android:title="@string/notify"
        android:id="@+id/notify"
        app:showAsAction="always"
        android:icon="@drawable/ic_notifications_black_24dp"/>


    <item
        android:title="@string/translate"
        android:id="@+id/translate"
        app:showAsAction="always"
        android:icon="@drawable/hindismall"/>


    <item
        android:id="@+id/nav_qr"
        android:icon="@drawable/qrmenuicon"
        android:title="@string/generate_scan_qr"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/setting"
        android:id="@+id/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_black_24dp"
        />
    <item
        android:title="@string/share"
        android:id="@+id/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_black_24dp"
        />
    <item
        android:title="@string/logout"
        android:id="@+id/logoutmenu"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>



</menu>