<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="#fff"
  >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#fff"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:transitionName="logo_image"
                android:src="@drawable/collective_intelligence_icon_use"/>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Welcome back\nStay safe from COvid-19"
                android:textColor="#000"
                android:textSize="18dp"
                android:transitionName="logo_text" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/sign_in_to_continue"
                android:transitionName="logo_text1"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/mobile"
                    android:transitionName="email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:transitionName="password"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:id="@+id/fp"
                    android:text="@string/forget_password_reset_password" />

                <Button
                    android:id="@+id/post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go"
                    android:background="#000"
                    android:textColor="#fff"
                    android:transitionName="go"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:text="@string/new_user_sign_up"
                    android:transitionName="switch"
                    android:textColor="#000"/>

                <ImageButton
                    android:id="@+id/language"
                    android:layout_width="160px"
                    android:layout_height="160px"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:paddingHorizontal="10dp"
                    android:src="@drawable/hindi"
                    android:textColor="#000"
                    android:transitionName="switch" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>